--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="delete_day_prompt_title">Excluir</string>
     <string name="list_screen_title">Horas</string>
     <string name="delete_day_prompt_description">Você tem certeza que gostaria de excluir o dia %s?</string>
+    <string name="hello_user">Olá, %s.</string>
+    <string name="week">Semana</string>
+    <string name="select_date">Selecione uma data</string>
+    <string name="cancel">Cancelar</string>
+    <string name="confirm">Confirmar</string>
+    <string name="ok" translatable="false">Ok</string>
+    <string name="week_range_format">%s até %s</string>
 </resources>
