--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BatePonto</string>
+    <string name="app_name" translatable="false">BatePonto</string>
     <string name="time_worked">Trabalhado: %s</string>
     <string name="config">Configuracões</string>
     <string name="delete_day_prompt_title">Excluir</string>
@@ -12,4 +12,5 @@
     <string name="confirm">Confirmar</string>
     <string name="ok" translatable="false">Ok</string>
     <string name="week_range_format">%s até %s</string>
+    <string name="default_job_name">Trabalho</string>
 </resources>
