--- a/feature/widget/src/main/res/values/strings.xml
+++ b/feature/widget/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="title">Add Time Mark</string>
     <string name="no_user">There is no connected user</string>
     <string name="no_user_description">No user</string>
     <string name="add_new_time_description">Add new time</string>
+    <string name="spent_today_format_1s">Worked today: %s</string>
 </resources>
